feat: add admin dashboard, meal management, and QR code generation features
- Implemented AdminMadplanPage for managing weekly meals with CRUD operations.
- Created AdminDashboard for displaying statistics on meals, activities, and users.
- Developed QRKoderPage for generating and managing QR codes for room access.
- Added API route for creating staff accounts with role validation and user metadata.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
             "approve": true,
             "matchCommandLine": true
         }
-    }
+    },
+    "github.copilot.chat.agent.autoFix": false,
+    "github.copilot.chat.alternateGeminiModelFPrompt.enabled": true,
+    "github.copilot.chat.alternateGptPrompt.enabled": false,
+    "github.copilot.chat.agent.currentEditorContext.enabled": false
 }
