--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,15 @@ yarn-error.log*
 # Capacitor / Android build artifacts
 /android/app/build/
 /android/.gradle/
+/android/app/src/main/assets/public/
+/android/app/src/main/assets/capacitor.config.json
+/android/app/src/main/assets/capacitor.plugins.json
 *.apk
 *.aab
+
+# PWA generated files
+/public/sw.js
+/public/workbox-*.js
 
 # typescript
 *.tsbuildinfo
