--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "@capacitor/core": "^8.0.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
-    "@types/qrcode": "^1.5.6",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
-    "next": "16.1.0",
+    "next": "^16.1.6",
     "next-pwa": "^5.6.0",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
@@ -29,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
