feat: integrate Capacitor for native features and add offline data caching
- Added CapacitorInit component to initialize Capacitor plugins in the root layout.
- Implemented OfflineIndicator component to show network status and cached data.
- Created useOfflineData hook for fetching data with offline cache support.
- Developed offline-cache utility for managing IndexedDB caching of Supabase data.
- Added generate-icons script to automate PWA icon generation from a source image.
- Introduced new SVG icons for PWA manifest.
- Updated metadata in layout for PWA support.
- Refactored various components to improve performance and reduce unnecessary imports.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,60 @@
     "github.copilot.chat.agent.autoFix": false,
     "github.copilot.chat.alternateGeminiModelFPrompt.enabled": true,
     "github.copilot.chat.alternateGptPrompt.enabled": false,
-    "github.copilot.chat.agent.currentEditorContext.enabled": false
+    "github.copilot.chat.agent.currentEditorContext.enabled": false,
+    
+    // Exclude generated/build folders from VS Code entirely
+    "files.exclude": {
+        "**/android/app/src/main/assets/**": true,
+        "**/android/app/build/**": true,
+        "**/android/build/**": true,
+        "**/android/capacitor-cordova-android-plugins/build/**": true,
+        "**/out/**": true,
+        "**/.next/**": true
+    },
+    "search.exclude": {
+        "**/android/**": true,
+        "**/out/**": true,
+        "**/.next/**": true
+    },
+    "files.watcherExclude": {
+        "**/android/**": true,
+        "**/out/**": true,
+        "**/.next/**": true
+    },
+    
+    // Disable built-in HTML validation (use HTMLHint instead)
+    "html.validate.scripts": false,
+    "html.validate.styles": false,
+    
+    // CSS validation - disable for generated files
+    "css.validate": true,
+    
+    // HTMLHint - only for src folder
+    "htmlhint.enable": true,
+    "htmlhint.options": {
+        "doctype-first": false
+    },
+    
+    // Webhint
+    "webhint.enableTelemetry": "disabled",
+    "webhint.ignore": [
+        "**/android/**",
+        "**/out/**",
+        "**/node_modules/**",
+        "**/.next/**"
+    ],
+    
+    // General linter exclusions
+    "linter.ignoreGlobs": [
+        "**/android/**",
+        "**/out/**",
+        "**/.next/**"
+    ],
+    
+    // Stylelint
+    "stylelint.ignoreDisables": true,
+    
+    // TypeScript - exclude generated folders
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
