--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <!-- Deep links for QR code login and app URLs -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Production domain -->
+                <data android:scheme="https" android:host="overmarksgaarden.dk" />
+                <data android:scheme="https" android:host="www.overmarksgaarden.dk" />
+                <data android:scheme="https" android:host="intra.overmarksgaarden.dk" />
+            </intent-filter>
+
+            <!-- Custom URL scheme for app-specific links -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="overmark" android:host="app" />
+            </intent-filter>
+
         </activity>
 
         <provider
