--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
+    "icons": "npx tsx scripts/generate-icons.ts",
+    "android:dev": "npx cap run android --target",
     "android:sync": "npx cap sync android",
     "android:open": "npx cap open android",
-    "android:run": "npm run build && npx cap sync android && npx cap run android"
+    "android:run": "npm run build && npx cap sync android && npx cap run android",
+    "android:build": "npm run build && npx cap sync android"
   },
   "dependencies": {
     "@capacitor/android": "^8.0.0",
+    "@capacitor/app": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/splash-screen": "^8.0.0",
+    "@capacitor/status-bar": "^8.0.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "framer-motion": "^12.23.26",
